Microservice/mongo-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:3.6.5-jessie

---

kind: Service
apiVersion: 1
metadata:
  name: fleetman-mongodb
spec:
  selector:
    app: mongodb
  ports: 
    -name: mongoport
     port: 27017     
  type: ClusterIP
